--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,8 +1,8 @@
 name: "Build and Deploy"
 
 on: [push, workflow_dispatch]
-    branches:
-      - 'release/22.04.01'
+   # branches:
+    #  - 'release/22.04.01'
   #  paths-ignore:
   #    - '**/*.md'
   #    - '**/*.gitignore'
