NAK-31 Surya Web API Framework

--- a/Web/web.config
+++ b/Web/web.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
-<aspNetCore processPath=".\Web.exe" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" />
-
+  <system.webServer>
+    <handlers>
+      <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+    </handlers>
+    <aspNetCore processPath="dotnet" arguments=".\Web.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+  </system.webServer>
 </configuration>
+<!--ProjectGuid: 10e54956-ecfa-4382-a608-83987260ead0-->
