--- a/Web/appsettings.Production.json
+++ b/Web/appsettings.Production.json
@@ -7,7 +7,7 @@
     }
   },
   "SuryaWebApi": {
-    "Endpoint": "http://localhost:8822"
+    "Endpoint": "http://suryawebapi.azurewebsites.net"
   },
   "Profile": {
     "Id": 10001
