changes for valut

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -10,9 +10,6 @@
     "ConnectionString": "InstrumentationKey=00b07fbb-8769-4abe-979a-f457c3ea4d1f;IngestionEndpoint=https://westus2-2.in.applicationinsights.azure.com/"
   },
   "Keyvault": {
-    "Uri": "https://nakshatrakeyvault.vault.azure.net/",
-    "TenentId": "aabcd75f-ebd5-4531-8652-f02e88eb40ce",
-    "ClientId": "8f1baac4-efc5-465c-81ce-c80cad2dabaa",
-    "ClientSecret": "Xmj8Q~Lrs7fMmWepEJM2n2tvg-QxxIcqrHEcmcfg"
+    "Uri": "https://nakshatrakeyvault.vault.azure.net/"
   }
 }
