--- a/WebApi/Web/appsettings.json
+++ b/WebApi/Web/appsettings.json
@@ -6,10 +6,7 @@
     }
   },
   "Keyvault": {
-    "Uri": "https://nakshatrakeyvault.vault.azure.net/",
-    "TenentId": "aabcd75f-ebd5-4531-8652-f02e88eb40ce",
-    "ClientId": "8f1baac4-efc5-465c-81ce-c80cad2dabaa",
-    "ClientSecret": "Xmj8Q~Lrs7fMmWepEJM2n2tvg-QxxIcqrHEcmcfg"
+    "Uri": "https://nakshatrakeyvault.vault.azure.net/"
   },
   "AllowedHosts": "*"
 }
