--- a/WebApi/Web/appsettings.json
+++ b/WebApi/Web/appsettings.json
@@ -8,5 +8,8 @@
   "Keyvault": {
     "Uri": "https://nakshatrakeyvault.vault.azure.net/"
   },
+  "CacheConfiguration": {
+    "AbsoluteExpirationInHours": 15
+  },
   "AllowedHosts": "*"
 }
