--- a/WebApi/Web/appsettings.json
+++ b/WebApi/Web/appsettings.json
@@ -11,5 +11,6 @@
   "CacheConfiguration": {
     "AbsoluteExpirationInHours": 15
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RemindersQueueName": "reminders-queue-surya"
 }
