--- a/WebApi/Web/appsettings.Development.json
+++ b/WebApi/Web/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ApplicationInsights": {
     "ConnectionString": "InstrumentationKey=6e57794d-57a6-4232-9106-e3b48e253635;IngestionEndpoint=https://westus-0.in.applicationinsights.azure.com/;LiveEndpoint=https://westus.livediagnostics.monitor.azure.com/"
-  }
+  },
+  "RemindersQueueName": "reminders-queue-surya-test"
 }
