fixed warning and changes to azure defaultcredentials exclusions

--- a/WebApi/WebApiFunctionApp/WebApiFunctionApp.csproj
+++ b/WebApi/WebApiFunctionApp/WebApiFunctionApp.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Communication.Sms" Version="1.0.1" />
