--- a/Web/appsettings.Production.json
+++ b/Web/appsettings.Production.json
@@ -9,6 +9,9 @@
   "SuryaWebApi": {
     "Endpoint": "http://suryawebapi.azurewebsites.net"
   },
+  "Profile": {
+    "Id": 10001
+  },
   "CacheConfiguration": {
     "AbsoluteExpirationInHours": 1,
     "SlidingExpirationInMinutes": 30
