--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -16,5 +16,8 @@
     "AbsoluteExpirationInHours": 1,
     "SlidingExpirationInMinutes": 30
   },
-  "CacheProvider": "Memory"
+  "CacheProvider": "Memory",
+  "Keyvault": {
+    "Uri": "https://kv-nakshatra-test-001.vault.azure.net/"
+  }
 }
