--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -11,5 +11,15 @@
   },
   "Keyvault": {
     "Uri": "https://nakshatrakeyvault.vault.azure.net/"
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "aabcd75f-ebd5-4531-8652-f02e88eb40ce",
+    "ClientId": "9cfd475e-c40c-4ba2-950e-11c72cc778c5",
+    "CallbackPath": "/signin-oidc",
+    "SignedOutCallbackPath": "/signout-oidc"
+  },
+  "ConnectionStrings": {
+    "WebContextConnection": "Server=tcp:nakshatra01.database.windows.net,1433;Initial Catalog=Admin;Persist Security Info=False;User ID=nakshatra;Password=L1l@dhar!204;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
