--- a/HostedServices/WebApi/Web/appsettings.json
+++ b/HostedServices/WebApi/Web/appsettings.json
@@ -9,7 +9,8 @@
     "Uri": "https://nakshatrakeyvault.vault.azure.net/"
   },
   "CacheConfiguration": {
-    "AbsoluteExpirationInHours": 15
+    "AbsoluteExpirationInHours": 15,
+    "SlidingExpirationInMinutes": 30
   },
   "CacheProvider": "Memory",
   "AllowedHosts": "*",
