--- a/.github/workflows/app-surya-test-001.yml
+++ b/.github/workflows/app-surya-test-001.yml
@@ -24,6 +24,17 @@ jobs:
       run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
     - name: Build
       run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Azure CLI script
+      uses: azure/CLI@v1
+      with:
+        azcliversion: 2.30.0
+        inlineScript: |
+          az account show
+          az storage -h
     - name: Test
       run: dotnet test "${{ env.TEST_WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --logger "trx;LogFileName=test-results.trx" || true
     - name: Test Report
