--- a/.github/workflows/amitdole-test-001.yml
+++ b/.github/workflows/amitdole-test-001.yml
@@ -10,6 +10,7 @@ env:
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 7.0.x
   WORKING_DIRECTORY: PersonalWebsite\Web
+  TEST_WORKING_DIRECTORY: HostedServices\WebApi\WebApi.Tests
 jobs:
   build-and-deploy:
     runs-on: windows-latest
