--- a/HostedServices/WebApi/Web/appsettings.json
+++ b/HostedServices/WebApi/Web/appsettings.json
@@ -1,6 +1,10 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.File" ],
+    "Using": [
+      "Serilog",
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": "Information",
     "Override": {
       "Microsoft.AspNetCore": "Warning"
@@ -25,7 +29,7 @@
       "WithThreadId"
     ],
     "Properties": {
-      "ApplicationName": "Serilog.PersonalWebsite.Web"
+      "ApplicationName": "Serilog.WebApi.Web"
     }
   },
   "AzureLogging": {
