--- a/PersonalWebsite/Web/appsettings.json
+++ b/PersonalWebsite/Web/appsettings.json
@@ -1,7 +1,11 @@
 {
   "DetailedErrors": true,
   "Serilog": {
-    "Using": [ "Serilog.Sinks.File" ],
+    "Using": [
+      "Serilog",
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": "Information",
     "Override": {
       "Microsoft.AspNetCore": "Warning"
